# GPZ

./: .gitignore  CMakeLists.txt  readme.md
include/: CompressorManager.h  CpuTimer.hpp  ICudaCompressor.cuh  cudaCompress.cuh  cudaTimer.cuh  cudaUtils.cuh  cudaWarpCompress.cuh  cudaWarpCompressDouble.cuh  utils.cuh
src/: CompressorManager.cpp  CudaTimer.cu  cudaWarpCompress.cu  cudaWarpCompressDouble.cu  main.cpp  utils.cu
